--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,179 @@ img {
   transform: rotate(90deg);
 }
 
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .modal {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    width: 370px;
+    min-height: 528px;
+    padding: 40px;
+    background-color: #ffffff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transform-origin: center center;
+    transform: translate(-50%, -50%);
+    transition: transform 2s ease-out;
+  }
+  .modal__close-btn-svg {
+    display: flex;
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    background-color: transparent;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+  }
+  .modal__form-header {
+    text-align: center;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.5;
+    letter-spacing: 0.03em;
+    color: #212121;
+    margin-bottom: 12px;
+  }
+  .modal__form-policy {
+    align-items: center;
+    display: flex;
+    margin: 0 auto;
+  }
+  .modal__form-policy::before {
+    display: inline-block;
+    content: "";
+    width: 14px;
+    height: 13px;
+    border: 2px solid #212121;
+    border-radius: 2px;
+  }
+  .modal__form-policy-checked:checked + .modal__form-policy::before {
+    background-color: var(--main-color);
+    border: 2px solid var(--main-color);
+    border-radius: 2px;
+    background-image: url(../images/icons-check.svg);
+    background-size: 14px 13px;
+    background-position: center;
+  }
+  .modal__form-policy-text {
+    font-size: 12px;
+    line-height: 1.666;
+    letter-spacing: 0.03em;
+    color: #757575;
+    margin-left: 8px;
+  }
+  .modal__form-policy-link {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.666;
+    letter-spacing: 0.03em;
+    -webkit-text-decoration-line: underline;
+            text-decoration-line: underline;
+    color: var(--main-color);
+  }
+  .modal__form-btn {
+    display: block;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.875;
+    letter-spacing: 0.06em;
+    cursor: pointer;
+    padding: 10px 76px;
+    color: #ffffff;
+    background: var(--main-color);
+    border: 1px solid var(--main-color);
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    margin: auto;
+    margin-top: 30px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .modal-form {
+    display: flex;
+    flex-direction: column;
+  }
+  .modal-form__field {
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    line-height: 1.166;
+    letter-spacing: 0.01em;
+    color: #757575;
+    margin-bottom: 10px;
+  }
+  .modal-form__input-wrapper {
+    position: relative;
+    display: block;
+    margin-top: 4px;
+  }
+  .modal-form__input {
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    box-sizing: border-box;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding-left: 42px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form__input:focus {
+    outline: none;
+    border-color: var(--main-color);
+    fill: var(--main-color);
+  }
+  .modal-form__input:focus + .modal-form__icon {
+    fill: var(--main-color);
+  }
+  .modal-form__icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    display: block;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form__message {
+    width: 100%;
+    box-sizing: border-box;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding-top: 12px;
+    padding-left: 16px;
+    margin-top: 4px;
+    margin-bottom: 10px;
+  }
+  .modal-form__message::-moz-placeholder {
+    font-size: 14px;
+    line-height: 1.142;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
+  .modal-form__message:-ms-input-placeholder {
+    font-size: 14px;
+    line-height: 1.142;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
+  .modal-form__message::placeholder {
+    font-size: 14px;
+    line-height: 1.142;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
+  .modal-form__message:focus {
+    outline: none;
+    border-color: var(--main-color);
+  }
+}
 @media screen and (min-width: 768px) and (max-width: 1999px) {
   .modal {
     position: absolute;
