--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,5 +1,6 @@
-body {
-  font-family: var(--main-font);
+body{
+    font-family: var(--main-font);
+    color: var(--main-color);
 }
 
 h1,
@@ -7,29 +8,22 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-  margin: 0;
-  padding: 0;
+h6{
+    margin: 0;
+    padding: 0;
 }
 
 ul,
-ol {
-  margin: 0;
-  padding: 0;
+ol{
+    margin: 0;
+    padding: 0;
 }
 
-p {
-  margin: 0;
-  padding: 0;
+p{
+    margin: 0;
+    padding: 0;
 }
 
-img {
-  display: block;
-}
-
-.list {
-  list-style: none;
-}
-.link {
-  text-decoration: none;
+.list{
+    list-style: none;
 }
