--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,67 +1,7 @@
-.container {
-  width: 100%;
-  padding: 0 15px;
+// --------------------------- MOBILE ------------------------------ //
+
+.container{
+    max-width: 320px;
+    padding: 0 20px;
+    margin: 0 auto;
 }
-
-@media screen and (min-width: 480px) {
-  .container {
-    max-width: 480px;
-    padding: 0 31px;
-    margin: 0 auto;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
-    padding: 0 15px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-}  
-
-@media screen and (min-width: 1200px) {
-  .container {
-    max-width: 1200px;
-    padding: 0 215px;
-    margin: 0 auto;
-    align-items: center;
-  }
-}  
-
-// .container {
-//   max-width: 1200px;
-//   padding: 0 15px;
-//   margin: 0 auto;
-//   align-items: center;
-
-//     .header &{
-//       display: flex;
-//       justify-content: space-between;
-//       align-items: center;
-//       padding-bottom: 0px;
-//     }
-
-//     .hero & {
-//       display: flex;
-//       flex-direction: column;
-//       align-items: center;
-//       flex-grow: 1;
-//       padding: 200px 452px;
-//     }
-
-//     .lorem & {
-//       display: flex;
-//     }
-
-//     .footer &{
-//       padding: 60px 0px;
-//       display: flex;
-//     }
-
-//     .portfolio &{
-//       padding-bottom: 94px;
-//     }
-// }
