--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,4 +1,8 @@
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+// --------------------------- MOBILE ------------------------------ //
+
+.section{
+    margin-left: auto;
+    margin-right: auto;
+    width:100%;
+    padding: 121px 0px 98px 0px; // to do ewentualnej zmiany, bo każda sekcja ma inne paddingi :X
 }
