--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,22 +1,11 @@
 @import "./utils/variables";
-@import "./utils/visually-hidden";
 
 @import "./base/common";
 @import "./base/container";
 @import "./base/section";
 
-@import "./components/backdrop";
-@import "./components/footer-social-list";
-@import "./components/menu-button";
-@import "./components/modal-menu";
-@import "./components/section-header";
-@import "./components/social-list";
 
-@import "./layout/clients";
-@import "./layout/footer";
-@import "./layout/gallery";
-@import "./layout/header";
-@import "./layout/hero";
-@import "./layout/lorem";
-@import "./layout/portfolio";
-@import "./layout/team";
+
+@import "./components/about";
+@import "./components/advantages";
+
