--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,22 +1,70 @@
 // tego nie mogę sprawdzić czy dobrze działa, bo nie widze zmian
 
 .about{
-    //background-color: var(--central-color);
-    background-color: aqua;
+    background-color: var(--central-color);
+    padding-top: 125px;
 }
 .about__title{
+    font-family: var(--secondary-font);
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.166;
+    padding-left: 41px;
+    padding-right: 41px;
+    color: #ffa5ba;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.about__subtitle{
+    font-family: var(--secondary-font);
+    font-size: 34px;
+    line-height: 1.147;
+    padding-left: 39px;
+    padding-right: 39px;    
+    color: var(--secondary-color);
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 26px;
+}
+
+.about__description{
     font-family: var(--main-font);
     font-weight: 500;
     font-size: 12px;
     line-height: 1.583;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-top: 46px;
+    margin-bottom: 27px;
 }
 
-.about__subtitle{
+.about__comment{
     font-family: var(--main-font);
     font-weight: 500;
     font-size: 12px;
     line-height: 1.583;
     color: #907E82;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.about__btn {
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.285;
+    display: flex;
+    align-items: center;
+    padding-left: 37px;
+    padding-right: 56px;
+    min-height: 44px;
+    color: var(--secondary-color);
+    background-color: var(--white-color);
+    border: 1px solid var(--white-color);
+    border-radius: 22px;
+    cursor: pointer;
+    margin-top: 17px;
+    margin-left: 30px;
 }
